[package]
name = "no-panics-whatsoever"
version = "0.1.0"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Statically assert that a program written in Rust does not panic"
homepage = "https://github.com/lachlansneff/no-panics-whatsoever"
repository = "https://github.com/lachlansneff/no-panics-whatsoever"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
